# avito-killer

./: .env  docker-compose.yml  main.py  pyproject.toml  requirments.txt
db/: base.py
models/: models.py
src/advertisement/: models.py
src/users/: main.py  models.py
