[tool.poetry]
name = "avito-killer"
version = "0.1.0"
description = "Simple advertisement microservices"
authors = ["aenternal <kotikote875@gmail.com>"]
license = "No"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
pytest = "^7.4.2"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
